[tool.poetry]
name = "m2stitch"
version = "0.2.0"
description = "M2Stitch"
authors = ["Yohsuke Fukai <ysk@yfukai.net>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/yfukai/m2stitch"
repository = "https://github.com/yfukai/m2stitch"
documentation = "https://m2stitch.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/yfukai/m2stitch/releases"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = ">=7,<9"
numpy = "^1.21"
pandas = "^1.2.4"
networkx = "^2.5.1"
scipy = "^1.6.3"
tqdm = "^4.60.0"
pytest-datadir = "^1.3.1"
pandas-stubs = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.0b1"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.14.1"
flake8 = "^3.9.0"
black = "^21.7b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.0"
Pygments = "^2.8.1"

[tool.poetry.scripts]
m2stitch = "m2stitch.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["m2stitch"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
